# wealth-hub-agent

./: .env.example  .gitignore  AGENTS.md  Dockerfile.backend  Dockerfile.mcp  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  stock_config.yml
.github/workflows/: pull-request-tests.yml
cli/: main.py  ui.py  utils.py
cli/clients/: websocket_client.py
cli/commands/: handler.py
clients/: alphavantage_rest_client.py  chroma_client.py  finnhub_rest_client.py  model_client.py
openspec/: project.md
openspec/changes/add-analyst-retrieval-agent/: design.md  proposal.md  tasks.md
openspec/changes/add-chromadb-container/: tasks.md
openspec/changes/add-fundamental-analyst-spec/: tasks.md
openspec/changes/add-orchestrator-observability/: proposal.md  tasks.md
openspec/changes/add-research-analyst-agent/: tasks.md
openspec/changes/add-retrieval-agent-workflow/: proposal.md  tasks.md
openspec/changes/add-workflow-orchestrator/: proposal.md  tasks.md
openspec/changes/add-workflow-run-history/: tasks.md
openspec/changes/archive/2026-01-07-add-retrieval-agent-workflow/: tasks.md
openspec/changes/archive/2026-01-13-add-fundamental-analyst-spec/: proposal.md  tasks.md
openspec/changes/archive/2026-01-14-add-news-analyst-agent/: proposal.md  tasks.md
openspec/changes/archive/2026-01-14-add-research-analyst-agent/: proposal.md
openspec/changes/archive/2026-01-14-add-workflow-orchestrator/: tasks.md
openspec/changes/archive/2026-01-17-add-chromadb-container/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-22-add-workflow-run-history/: design.md  proposal.md  tasks.md
openspec/specs/deployment/: spec.md
openspec/specs/manager_agent/: spec.md
openspec/specs/news_analyst_agent/: spec.md
openspec/specs/research_analyst_agent/: spec.md
openspec/specs/retrieval_agent/: spec.md
openspec/specs/workflow_orchestrator/: spec.md
scripts/: chromadb-init.sh
src/: main.py
src/agent_tools/: alpha_vantage_mcp.py  finnhub_mcp.py  mcp_manager.py  mcp_subprocess_runner.py  rag_mcp.py  tool_alpha_vantage_news.py
src/agent_tools/alpha_vantage/: __init__.py  __main__.py  alpha_vantage_mcp.py  alpha_vantage_mcp_impl.py
src/agent_tools/analyst_report/: server.py
src/agent_tools/edgar/: __init__.py  edgar_client.py  ingest_primary_document.py  search_reports.py  search_reports_impl.py  upsert_edgar_report_impl.py
src/agent_tools/finnhub/: __init__.py  __main__.py  finnhub_mcp.py  finnhub_mcp_impl.py
src/agent_tools/rag/: __init__.py  chroma_utils.py  context_builder.py  extract_financial_statements_impl.py  retrieve_report.py  retrieve_report_impl.py
src/agent_tools/rag_mcp/: __init__.py  __main__.py
src/agents/: base_agent.py  base_pipeline.py  news_agent.py
src/agents/analyst/: __main__.py  fundamental_analyst_agent.py  pipeline.py  prompt.py  retrieval_agent.py
src/agents/analyst/fundamental/: __main__.py  agent.py  fundamental_analyst_agent.py  pipeline.py  prompt.py  spec.md
src/agents/analyst/news/: __main__.py  news_analyst_agent.py  pipeline.py  prompt.py
src/agents/retrieval/: __main__.py  exceptions.py  pipeline.py  prompt.py  retrieval_agent.py
src/factory/: mcp_server_factory.py
src/models/: __init__.py  analyst_retrieval.py  fundamental_analyst.py  fundamentals.py  income_statement.py  investment_manager.py  news_analyst.py  news_sentiments.py  rag_retrieve.py  research_analyst.py  retrieval_agent.py
src/orchestrator/: orchestrator.py  run_history.py  types.py
src/routes/: rag_route.py  workflow_route.py
src/scripts/: run_mcp_servers.py
src/utils/: agent_model_config.py  cache.py  date_utils.py  edgar_config.py  logging_config.py  mcp_config.py
tests/: conftest.py
tests/agents/: conftest.py  test_edgar_tools.py  test_extract_financial_statements_impl.py  test_fundamental_analyst_agent.py  test_investment_manager_agent.py  test_news_analyst_agent.py  test_rag_retrieve_report.py  test_research_analyst_agent.py  test_retrieval_agent.py
tests/agents/analyst/: test_retrieval_agent.py
tests/orchestrator/: test_run_history.py  test_workflow_engine.py
tests/routes/: test_workflow_route.py
web/: Dockerfile  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/lib/: axios.ts  useWorkflow.ts  workflow_history_api.ts
(+27 files in other folders)
