[project]
name = "wealth-hub-agent"
version = "0.1.0"
description = "Wealth Hub agent service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  # Core web and runtime deps
  "uvicorn[standard]>=0.30.0",
  "python-dotenv>=1.2.1",
  "fastapi>=0.116.1",
  "pydantic>=2.9.2",
  "pyyaml>=6.0.3",
  # Agent-specific deps (from requirements.txt)
  "openai>=2.14.0",
  "httpx>=0.28.1",
  "finnhub-python>=2.4.26",
  "fastmcp>=2.14.1",
  "diskcache>=5.6.3",
  "llama-cloud-services>=0.6.88",
  "llama-index-embeddings-openai>=0.5.1",
  "llama-index-llms-openai>=0.6.12",
  "chromadb>=1.4.0",
  "llama-index-vector-stores-chroma>=0.5.5",
]

[project.optional-dependencies]
dev = [
  "watchfiles>=1.0.0",
  "ruff>=0.6.9",
  "mypy>=1.11.2",
]
test = [
  "pytest>=9.0.1",
  "testcontainers>=4.9.0",
]
cli = [
  "rich>=14.2.0",
  "websocket-client>=1.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E","F","I","UP","B","SIM","PL","RUF"]
ignore = ["E501", "PLR0913", "PLC0415", "E402", "PLR0915", "PLR0912"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = false
